test_data/Xml/Unexpected/Unserializable/InvalidClassName/referenceElement/wrong.xml.exception
Expected an element representing an instance of class ReferenceElement with element name referenceElement, but got: utterlyInvalid at: the beginning